<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/moodReminderServiceInstructionsTV" android:text="@string/moodReminderServiceInstructionsText" android:textSize="21sp"></TextView>

	<CheckBox android:text="@string/reminders_on" android:id="@+id/reminders_on" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>

	<Button android:text="@string/save_reminder_settings" android:id="@+id/save_reminder_settings" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center|clip_horizontal" android:layout_gravity="center_horizontal|center" android:paddingRight="30sp" android:paddingLeft="30sp" android:textSize="18sp"></Button>

</LinearLayout>
